# SAVMS

./: .gitignore  ALERT_PAGE_README.md  LICENSE  README.md  mydb.sql  package-lock.json  package.json  pom.xml
VehicleSImulator/: README.md  config.py  database_manager.py  enhanced_main.py  enhanced_simulator_manager.py  enhanced_vehicle_model.py  enhanced_vehicle_simulator.py  main.py  requirements.txt  simulator_manager.py  start_simulator.py  vehicle_config_loader.py  vehicle_configs.json  vehicle_model.py  vehicle_simulator.py  车辆配置说明.md  配置指南.md
engine/: CMakeLists.txt  CmakeLists.txt  README.md
engine/src/: example  example.cpp
engine/src/computation_engine/: computation_engine.cpp
engine/src/data_collector/: data_collector.cpp
engine/src/data_processor/: data_processor.cpp  data_processor.h
engine/src/getData/: getData.cpp  getData.h
engine/src/handleData/: handleData.cpp  handleData.h
engine/src/interface/: interface.cpp  interface.h
engine/src/jni_interface/: com_example_dataprocessing_service_DataProcessingService.cpp  com_example_dataprocessing_service_DataProcessingService.h  dataprocessing_service_DataProcessingService.cpp  dataprocessing_service_DataProcessingService.h
engine/src/resultData/: resultData.cpp  resultData.h
frontend/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  Routes.jsx  UserContext.jsx  axiosInstance.js
frontend/src/assets/: LocationCSS.css  Logo.jsx  TaskCardStyle.css
frontend/src/components/: AddNewCar.jsx  AlertModal.jsx  CarInfo.jsx  ChatPage.jsx  ClientSidebar.jsx  CreateTaskCard.jsx  CurrentWeatherCard.jsx  DragChat.css  HourlyForecastCard.jsx  Map.jsx  SearchBar.jsx  Sidebar.jsx  TaskAssignmentModal.jsx  TaskDetailCard.jsx  TaskRouteMap.jsx
frontend/src/pages/: ChatPage.jsx  ClientProfilePage.jsx  ClientTasksPage.jsx  CurrentTasksPage.jsx  MainPage.jsx  MapPage.jsx  ProfilePage.jsx  RegisterAndLogin.jsx  SCUVMS.jsx  SCUVMS_Client.jsx  VehicleStatusPage.jsx  testPage.jsx
frontend/src/services/: chatAPI.js
frontend/src/styles/: AlertStyles.css  PopoverStyles.css
frontend/src/utils/: getWeatherIcons.jsx  sessionManager.js  testChatIntegration.js
iOS_for_SAVMS/: API_使用说明.md  readme.md
iOS_for_SAVMS/Guidance/: API_Usage_Guide.md  SAVMS_API_Guide_EN.md
iOS_for_SAVMS/SAVMS/: ContentView.swift  GoogleService-Info.plist  Info.plist  SAVMSApp.swift
iOS_for_SAVMS/SAVMS.xcodeproj/: project.pbxproj
iOS_for_SAVMS/SAVMS/App/: AppDelegate.swift  SAVMSApp.swift
iOS_for_SAVMS/SAVMS/Models/: .gitkeep
iOS_for_SAVMS/SAVMS/Services/: AuthSession.swift  BackendAPIService.swift  DB_API.swift  SpeechRecognitionService.swift
iOS_for_SAVMS/SAVMS/Utilities/: RoundedCorner.swift  VehicleStore.swift
iOS_for_SAVMS/SAVMS/ViewModels/: AlertModel.swift  FsChunkModel.swift  TaskModel.swift  UserModel.swift  VehicleModel.swift
iOS_for_SAVMS/SAVMS/Views/: BottomPanelView.swift  ContentView.swift  DataTestView.swift  MainTabView.swift  MapView.swift  ProfileView.swift  SettingView.swift  SpeechToTextTestView.swift
iOS_for_SAVMS/SAVMSTests/: SAVMSTests.swift
iOS_for_SAVMS/SAVMSUITests/: SAVMSUITests.swift  SAVMSUITestsLaunchTests.swift
ios/: README.md
ios/SAVMS/: AppDelegate.swift  Info.plist  SceneDelegate.swift
ios/SAVMS.xcodeproj/: project.pbxproj
ios/SAVMS/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ios/SAVMS/Models/: Vehicle.swift
ios/SAVMS/Services/: NetworkService.swift  VehicleService.swift
ios/SAVMS/ViewControllers/: ViewController.swift
simulate_data/: README.md  simulator_receive.py  simulator_sender.py
simulate_data/savms_data/batch_0/: .batch_complete  .batch_start  telemetry.json
simulate_data/savms_data/batch_1/: .batch_start  telemetry.json
simulate_data/savms_data/batch_10/: .batch_complete  .batch_start  telemetry.json
simulate_data/savms_data/batch_11/: .batch_start  telemetry.json
simulate_data/savms_data/batch_12/: .batch_start  telemetry.json
simulate_data/savms_data/batch_13/: .batch_complete  telemetry.json
simulate_data/savms_data/batch_14/: .batch_start  telemetry.json
simulate_data/savms_data/batch_15/: .batch_start  telemetry.json
simulate_data/savms_data/batch_16/: .batch_complete  .batch_start  telemetry.json
simulate_data/savms_data/batch_17/: .batch_complete  telemetry.json
simulate_data/savms_data/batch_18/: .batch_complete  .batch_start  telemetry.json
simulate_data/savms_data/batch_19/: .batch_complete  telemetry.json
simulate_data/savms_data/batch_2/: .batch_start  telemetry.json
simulate_data/savms_data/batch_20/: .batch_start  telemetry.json
simulate_data/savms_data/batch_21/: .batch_complete  .batch_start  telemetry.json
simulate_data/savms_data/batch_22/: .batch_start  telemetry.json
simulate_data/savms_data/batch_23/: .batch_start  telemetry.json
simulate_data/savms_data/batch_24/: .batch_complete  telemetry.json
simulate_data/savms_data/batch_25/: .batch_start  telemetry.json
simulate_data/savms_data/batch_26/: .batch_complete  .batch_start  telemetry.json
simulate_data/savms_data/batch_27/: .batch_complete  telemetry.json
simulate_data/savms_data/batch_28/: .batch_complete  telemetry.json
simulate_data/savms_data/batch_29/: .batch_complete  telemetry.json
sql/: create_tables.sql
(+221 files in other folders)
